--- a/progress/index.html
+++ b/progress/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8">
 		<title> Progress | 222dof </title>
-		<link href="/css/foundation.css" rel="stylesheet"/>
+		<link href="/222dof/css/foundation.css" rel="stylesheet">
 		
 		
 	</head>
@@ -11,14 +11,14 @@
 		<div id="container">
 			<nav id="main-navigation">
 				<div id="header-logo">
-					<h1><a href="/">222 days of code</a></h1>
+					<h1><a href="/222dof/">222 days of code</a></h1>
 					<small>posts everyday (until August 1st)</small>
 				</div>
 				
 				<ul id="main-navigation-links">
-					<li><a href="/progress/">progress</a></li>
-					<li><a href="/goals/">goals</a></li>
-					<li><a href="/projects/">projects</a></li>
+					<li><a href="/222dof/progress/">progress</a></li>
+					<li><a href="/222dof/goals/">goals</a></li>
+					<li><a href="/222dof/projects/">projects</a></li>
 				</ul>
 			</nav>
 			
@@ -31,11 +31,11 @@
 			<footer id="main-footer">
 				<div id="main-footer-about">
 					<p>Hello World, in this blog I aim to post everyday for the entire 222 days. It's a challenge I thought of out of the blue and decided why not? It won't hurt me if anything it will help me be more accountable and maybe even help others along the way too! </p>
-					<br/>
+					<br>
 					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 				</div>
 				
-				<img src="/vectors/github.svg" alt="github icon"/>
+				<img src="/222dof/vectors/github.svg" alt="github icon">
 			</footer>
 		</div>
 	
