removed width from .month

--- a/notes/index.html
+++ b/notes/index.html
@@ -29,7 +29,7 @@
 <ul>
     <ul>
         <label for="">Design</label>
-        <li><a href="https://tailwindcss.com/resources">Tailwind Design Book</a></li>
+        <li><a href="https://tailwindcss.com/resources" target="_blank">Tailwind Design Book</a></li>
     </ul>
     <ul>
         <label for="">Static Site Generators</label>
