--- a/progress/index.html
+++ b/progress/index.html
@@ -13,7 +13,7 @@
         justify-content: space-between;
     }
     .month {
-        width: 45%;
+        /* width: 45%; */
         height: fit-content;
         display: flex;
         flex-direction: column;
