--- a/projects/index.html
+++ b/projects/index.html
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <th scope="row">driving instructor</th>
-            <td>Website that teaches people from different American states how to drive primarily based on different scenarious -- like a game.</td>
+            <td>Website that teaches people from different American states how to drive primarily based on different scenarios -- like a game.</td>
             <td>Idea</td>
         </tr>
         <tr>
@@ -87,12 +87,12 @@
 
 			<footer id="main-footer">
 				<div id="main-footer-about">
-					<p>Hello World, in this blog I aim to post everyday for the entire 222 days. It's a challenge I thought of out of the blue and decided why not? It won't hurt me if anything it will help me be more accountable and maybe even help others along the way too! </p>
+					<p>Hello World, in this blog I am to post, document, educate, and inspire others. I know how to make basic sites but I don't know the ins-and-outs of html, css, and js which I plan to change during these 222 days of daily posting my daily studies.</p>
 					<br>
 					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 				</div>
 				
-				<img src="/222dof/vectors/github.svg" alt="github icon">
+				<a href="https://github.com/constanthing" target="_blank"><img src="/222dof/vectors/github.svg" alt="github icon"></a>
 			</footer>
 		</div>
 	
