more updates to notes and design change on list of notes in root route

--- a/progress/index.html
+++ b/progress/index.html
@@ -61,8 +61,8 @@
 				<ul id="main-navigation-links">
 					<li><a href="/222dof/progress/">progress</a></li>
 					<li><a href="/222dof/goals/">goals</a></li>
-					<li><a href="/222dof/projects/">projects</a></li>
 					<li><a href="/222dof/notes/">notes</a></li>
+					<li><a href="/222dof/projects/">projects</a></li>
 				</ul>
 			</nav>
 			
@@ -79,7 +79,9 @@
 
 			<footer id="main-footer">
 				<div id="main-footer-about">
-					<p>Hello World, in this blog I aim to document, educate, and inspire others. I know how to make basic sites but I don't know the ins-and-outs of html, css, and js which I plan to change during these 222 days of daily postings of my daily studies.</p>
+					<p>This blog exists for two reasons: motivation and guidance. I found that I was lacking motivation to code even though I love it so I decided to challenge myself. 
+					222 days of studying web development and posting about it everyday. Not only will I grasp concepts better by writing posts as if I were teaching it but also this
+					blog can serve as guidance for aspiring web developers. As the last post will be about me getting an internship basd on these 222 days of studying.</p> 
 					<br>
 					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 				</div>
