added ascending/descending sorting to posts, function to show relative output of notes parent link, and updated decription of blog

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 <!-- iterate through posts -->
 
 
-<div class="month">
+<div class="month" id="December">
 	<div class="month-header">
 		<h2 class="">December</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort ">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="December">Posts order</small>
 			</div>
 			<small>3 posts</small>
 		</div>
@@ -133,13 +133,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="January">
 	<div class="month-header">
 		<h2 class="disabled">January</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="January">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -150,13 +150,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="Febuary">
 	<div class="month-header">
 		<h2 class="disabled">Febuary</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="Febuary">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -167,13 +167,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="March">
 	<div class="month-header">
 		<h2 class="disabled">March</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="March">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -184,13 +184,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="April">
 	<div class="month-header">
 		<h2 class="disabled">April</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="April">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -201,13 +201,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="May">
 	<div class="month-header">
 		<h2 class="disabled">May</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="May">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -218,13 +218,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="June">
 	<div class="month-header">
 		<h2 class="disabled">June</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="June">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -235,13 +235,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="July">
 	<div class="month-header">
 		<h2 class="disabled">July</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="July">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -252,13 +252,13 @@
 </div>
 
 
-<div class="month">
+<div class="month" id="August">
 	<div class="month-header">
 		<h2 class="disabled">August</h2>
 		<div class="month-header-metadata">
 			<div class="month-header-metadata-sort disabled">
-				<img src="/222dof/vectors/descending.svg" alt="Descending icon">
-				<small class="clickable" onclick="postsOrder(this)" data-order="0">Posts order</small>
+				<img src="/222dof/vectors/ascending.svg" alt="Ascending icon">
+				<small class="clickable" onclick="postsOrder(this)" data-order="1" data-parent="August">Posts order</small>
 			</div>
 			<small>0 posts</small>
 		</div>
@@ -278,9 +278,8 @@
 
 			<footer id="main-footer">
 				<div id="main-footer-about">
-					<p>This blog exists for two reasons: motivation and guidance. I found that I was lacking motivation to code even though I love it so I decided to challenge myself. 
-					222 days of studying web development and posting about it everyday. Not only will I grasp concepts better by writing posts as if I were teaching it but also this
-					blog can serve as guidance for aspiring web developers. As the last post will be about me getting an internship basd on these 222 days of studying.</p> 
+					<p>222 days of blog posts on my journey to becoming a web developer. I hope this can serve as a resource
+					for aspiring web developers with useful posts, notes, and links to guide them on their journey.</p>
 					<br>
 					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 				</div>
@@ -294,6 +293,34 @@
 	const currentMonth = new Date().toLocaleString("en-US", { month: "long" });
 
 	function postsOrder(e) {
+		// flip the posts starting from the bottom
+		const monthPosts = document.querySelector(`#${e.dataset.parent}`).querySelector(".month-posts");
+		let posts = monthPosts.querySelectorAll(".post");
+
+		for (let i = 0; i < parseInt(posts.length/2); i++) {
+			const first = posts[0];
+			const second = posts[posts.length - 1 - i];
+
+			monthPosts.insertBefore(second, first)
+			monthPosts.insertBefore(first, posts[posts.length - i])
+		}
+		// posts = Array.from(posts)
+		// posts = posts.reverse()
+		// let index = 0;
+		// for (const post of posts) {
+		// 	console.log(post, index)
+		// 	monthPosts.insertBefore(post, monthPosts.firstElementChild)
+		// 	index += 1;
+		// }
+		
+		// console.log(half)
+		// for (let i = 0; i < half; i++) {
+		// 	monthPosts.insertBefore(monthPosts.lastElementChild, monthPosts.firstElementChild)
+		// }
+
+
+
+
 		// 0 = descending
 		// 1 = ascending
 		const orderImage = e.previousElementSibling;
