--- a/projects/index.html
+++ b/projects/index.html
@@ -30,71 +30,88 @@
 			
 			<div id="content">
 			
-<!-- <h1>Projects</h1> -->
-<table>
-    <!-- <caption>Project Information</caption> -->
-    <thead>
 
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="table-separator">
-            <th scope="row" colspan="4">In Development</th>
-        </tr>
-        <tr>
-            <th scope="row"><a href="https://github.com/constanthing/cymages" target="_blank">cymages</a></th>
-            <td>Image gallery, adjuster, and exporter for Cyberpunk 2077 images.</td>
-            <td class="incomplete">Incomplete</td>
-        </tr>
-        <tr>
-            <th scope="row"><a href="https://github.com/constanthing/222dof" target="_blank">222dof</a></th>
-            <td>Personal blog starting 12/22/2024 with daily posts about progress to learning web development.</td>
-            <td class="incomplete">Incomplete</td>
-        </tr>
-        <tr>
-            <th scope="row"><a href="https://github.com/constanthing/typing" target="_blank">typing</a></th>
-            <td>Typing website like monkeytype/typeracer. Starter website after a long hiatus from programming to get me motivated again.</td>
-            <td class="incomplete">Incomplete</td>
-        </tr>
-        <tr class="table-separator">
-            <th scope="row" colspan="4">Future Websites</th>
-        </tr>
-        <tr>
-            <th scope="row">driving instructor</th>
-            <td>Website that teaches people from different American states how to drive primarily based on different scenarios -- like a game.</td>
-            <td>Idea</td>
-        </tr>
-        <tr>
-            <th scope="row">whatodo</th>
-            <td>Personal city navigator that shows what to do in a city such as events, food, shopping, views, trails, parks, etc.</td>
-            <td>Idea</td>
-        </tr>
-        <tr>
-            <th scope="row">moud</th>
-            <td>[music, presentation, ]</td>
-            <td>Idea</td>
-        </tr>
-        <tr>
-            <th scope="row">undertheskin</th>
-            <td>After learning the ins-and-outs of CSS I want to practice by creating a framework like tailwind, bootstrap, minimal, etc.</td>
-            <td>Idea</td>
-        </tr>
-    </tbody>
-</table>
+<h2>In Development</h2>
+<div class="projects-container">
+
+
+    <div class="project">
+        <a href="github.com/constanthing/cymages.git" target="_blank">
+            <img class="project-image" src="/222dof/vectors/cymages-logo.svg" alt="">
+        </a>
+        <div class="project-body">
+            <div class="project-metadata">
+            </div>
+            <p>Image gallery, adjuster, and exporter for Cyberpunk 2077 images.</p>
+        </div>
+    </div>
+    <div class="project">
+        <a href="github.com/constanthing/222dof.git" target="_blank">
+            <img class="project-image" src="/222dof/vectors/222dof-logo.svg" alt="">
+        </a>
+        <div class="project-body">
+            <div class="project-metadata">
+            </div>
+            <p>Personal blog starting 12/22/2024 with daily posts about progress to learning web development.</p>
+        </div>
+    </div>
+    <div class="project">
+        <a href="github.com/constanthing/tieping.git" target="_blank">
+            <img class="project-image" src="/222dof/vectors/tieping-logo.svg" alt="">
+        </a>
+        <div class="project-body">
+            <div class="project-metadata">
+            </div>
+            <p>Typing website like monkeytype/typeracer. Starter website after a long hiatus from programming to get me
+                motivated again.</p>
+        </div>
+    </div>
+</div>
+
+<h2>Future Websites</h2>
+<div class="projects-container">
+    <div class="project">
+        <div class="project-title">
+            <h3>Driving Instructor</h3>
+        </div>
+        <div class="project-body">
+            <p>Website that teaches people from different American states how to drive primarily based on different scenarios -- like a game.	</p>
+        </div>
+    </div>
+    <div class="project">
+        <div class="project-title">
+            <h3>whatodo</h3>
+        </div>
+        <div class="project-body">
+            <p>Personal city navigator that shows what to do in a city such as events, food, shopping, views, trails, parks, etc.	</p>
+        </div>
+    </div>
+    <div class="project">
+        <div class="project-title">
+            <h3>undertheskin</h3>
+        </div>
+        <div class="project-body">
+            <p>After learning the ins-and-outs of CSS I want to practice by creating a framework like tailwind, bootstrap, minimal, etc.	</p>
+        </div>
+    </div>
+    <div class="project">
+        <div class="project-title">
+            <h3>moud</h3>
+        </div>
+        <div class="project-body">
+            <p>[music, presentation, ]	</p>
+        </div>
+    </div>
+</div>
 
 			</div>
 	
 
 			<footer id="main-footer">
 				<div id="main-footer-about">
+					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 					<p>222 days of blog posts on my journey to becoming a web developer. I hope this can serve as a resource
 					for aspiring web developers with useful posts, notes, and links to guide them on their journey.</p>
-					<br>
-					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 				</div>
 				
 				<a href="https://github.com/constanthing" target="_blank"><img src="/222dof/vectors/github.svg" alt="github icon"></a>
