design to individual posts

--- a/projects/index.html
+++ b/projects/index.html
@@ -36,7 +36,7 @@
 
 
     <div class="project">
-        <a href="github.com/constanthing/cymages.git" target="_blank">
+        <a href="https://github.com/constanthing/cymages.git" target="_blank">
             <img class="project-image" src="/222dof/vectors/cymages-logo.svg" alt="">
         </a>
         <div class="project-body">
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="project">
-        <a href="github.com/constanthing/222dof.git" target="_blank">
+        <a href="https://github.com/constanthing/222dof.git" target="_blank">
             <img class="project-image" src="/222dof/vectors/222dof-logo.svg" alt="">
         </a>
         <div class="project-body">
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="project">
-        <a href="github.com/constanthing/tieping.git" target="_blank">
+        <a href="https://github.com/constanthing/typing.git" target="_blank">
             <img class="project-image" src="/222dof/vectors/tieping-logo.svg" alt="">
         </a>
         <div class="project-body">
