update to first blog post

--- a/notes/index.html
+++ b/notes/index.html
@@ -152,7 +152,6 @@
         }
         #notes-output {
             width: 100%;
-            padding: 2em;
         }
         blockquote {
             /* margin: .5em 0 1em 0; */
@@ -261,6 +260,7 @@
             <li><a href="https://prismjs.com/index.html" target="_blank">PrismJS</a></li>
             <li><a href="https://markdowntohtml.com/" target="_blank">HTML to Markdown</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_grid_layout/Basic_concepts_of_grid_layout" target="_blank">Grid Layout</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Jank" target="_blank">Jank Definition</a></li>
         </ul>
 
     </ul>
